--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h1 {
 <div>
   
 <p><img src="dp_1.PNG" alt="Pineapple" width=100 height=100 style="float: right;margin-left:15px;">
-<h2>TEST PROFILE</h2>
+<h2>Dhivya Manoharan PROFILE</h2>
 <p>Data Analyst at Test Technologies, Chennai. <br> testprotfolio_93@gmail.com <br> Mob: 765890345</p>
     </p>
   </div>
