--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ h1 {
 <div>
   
 <p><img src="dp_1.PNG" alt="Pineapple" width=100 height=100 style="float: right;margin-left:15px;">
-<h2>Dhivya  PROFILE</h2>
-<p>Data Analyst at Test Technologies, Chennai. <br> testprotfolio_93@gmail.com <br> Mob: 765890345</p>
+<h2>Dhivya Manoharan</h2>
+<p>Data Analyst  <br> iamdhivyam@gmail.com <br> Mob: 9884603044</p>
     </p>
   </div>
 <hr>
